2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-08-29  Andreas Kupries  <andreask@activestate.com>

	* tree.testsuite: Simplified constraint definition, we now have a
	  standard syntax (backward compat def for tcltest 1.0 in the
	  devtools/testutilities.tcl).

	* sets.testsuite: Added a test demonstrating a shimmering problem
	  in the C implementation of struct::set (handling of pure list
	  values is bad).

	* sets/s.c: Fixed the bug demonstrated by the new test, see
	* pkgIndex.tcl: above. Version of package bumped to 2.2.1. Version
	  of tcllibc bumped to 0.3.2.

2007-08-22  Andreas Kupries  <andreask@activestate.com>

	* struct_list.man: Fixed example for 'filterfor', removed the
	  bogus 'expr' layer. The command runs 'expr' itself. This fixes
	  [SF Tcllib Bug 1779424].

2007-08-03  Andreas Kupries  <andreask@activestate.com>

	* sets.test (Nothing): Updated to changes in reporting of errors
	  with alias commands in 8.5.

2007-05-16  Kevin B. Kenny  <kennykb@acm.org>

	* list.tcl (LlcsInvertMerge2): Fixed a bug where incorrect
	"unchanged" entries were generated on a merged list.
	* list.test (lcsInv-4.2,lcsInv-4.3): Corrected the test cases
	because they were expecting incorrect results from
	the above bug. [Bug 1720331]
	* pkgIndex.tcl: Advanced version number of 'struct::list' to 1.6.1
	
2007-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tree.tcl: Renamed various commands handling accelerators. This
	  brought their names into compliance with the requirements of the
	  'TestAccel*' commands in devtools.

	* sets.tcl: Fixed use of KnownImplementations missed by last
	  change.

2007-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tcl: Renamed various commands handling accelerators. This
	  brought their names into compliance with the requirements of the
	  'TestAccel*' commands in devtools.
