@@ -6,7 +6,7 @@
 #
 # Copyright (c) 2003 by Kevin B. Kenny. All rights reserved.
 #
-# RCS: @(#) $Id: list.test,v 1.26 2007/05/16 22:20:16 kennykb Exp $
+# RCS: @(#) $Id: list.test,v 1.27 2007/09/19 20:44:21 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -1094,6 +1094,11 @@ interp alias {} firstperm    {} ::struct::list::list firstperm
 interp alias {} nextperm     {} ::struct::list::list nextperm
 interp alias {} foreachperm  {} ::struct::list::list foreachperm
 interp alias {} permutations {} ::struct::list::list permutations
+
+test permutations-0.0 {permutations command, single element list} {
+    permutations a
+} a
+
 
 array set ps {
     {Tom Dick Harry Bob} {
