@@ -1,12 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
-[comment {$Id: struct_list.man,v 1.20 2007/08/22 16:41:53 andreas_kupries Exp $}]
-[manpage_begin struct::list n 1.6.1]
+[comment {$Id: struct_list.man,v 1.21 2007/09/19 20:44:21 andreas_kupries Exp $}]
+[manpage_begin struct::list n 1.6.2]
 [copyright {2003-2005 by Kevin B. Kenny. All rights reserved}]
-[copyright {2003-2006 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[copyright {2003-2007 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc {Tcl Data Structures}]
 [titledesc {Procedures for manipulating lists}]
 [require Tcl 8.0]
-[require struct::list [opt 1.6.1]]
+[require struct::list [opt 1.6.2]]
 [description]
 
 [para]
